# ChangeLog for sys-libs/freeipmi
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/freeipmi/ChangeLog,v 1.23 2009/11/19 21:21:18 flameeyes Exp $

*freeipmi-0.8.2 (02 Feb 2010)

  02 Feb 2010; Daniel Robbins <drobbins@funtoo.org> +freeipmi-0.8.2.ebuild:
  new upstream version with better hw support.

*freeipmi-0.7.15 (19 Nov 2009)

  19 Nov 2009; Diego E. PettenÃ² <flameeyes@gentoo.org>
  -freeipmi-0.7.12.ebuild, -freeipmi-0.7.13.ebuild, -freeipmi-0.7.14.ebuild,
  +freeipmi-0.7.15.ebuild:
  Version bump and remove old.

*freeipmi-0.7.14 (24 Oct 2009)

  24 Oct 2009; Diego E. PettenÃ² <flameeyes@gentoo.org>
  +freeipmi-0.7.14.ebuild:
  Version bump.

*freeipmi-0.7.13 (01 Oct 2009)

  01 Oct 2009; Diego E. PettenÃ² <flameeyes@gentoo.org>
  freeipmi-0.6.10.ebuild, +freeipmi-0.7.13.ebuild:
  Version bump, fix 0.6.10 for the wrong rm as well.

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> freeipmi-0.4.4.ebuild:
  Remove virtual/libc

*freeipmi-0.7.12 (09 Sep 2009)

  09 Sep 2009; Diego E. PettenÃ² <flameeyes@gentoo.org>
  -freeipmi-0.7.9.ebuild, -freeipmi-0.7.10.ebuild, -freeipmi-0.7.11.ebuild,
  +freeipmi-0.7.12.ebuild:
  Bump to 0.7.12 and remove the rest of the 0.7 series.

*freeipmi-0.7.11 (29 Jul 2009)

  29 Jul 2009; Diego E. PettenÃ² <flameeyes@gentoo.org>
  +freeipmi-0.7.11.ebuild:
  Version bump.

*freeipmi-0.7.10 (17 Jun 2009)

  17 Jun 2009; Diego E. PettenÃ² <flameeyes@gentoo.org>
  +freeipmi-0.7.10.ebuild:
  Version bump.

  20 May 2009; Diego E. PettenÃ² <flameeyes@gentoo.org>
  -freeipmi-0.7.8.ebuild, freeipmi-0.7.9.ebuild:
  Fix sandbox violation when re-installing the same version (and remove
  old).

*freeipmi-0.7.9 (16 May 2009)

  16 May 2009; Diego E. PettenÃ² <flameeyes@gentoo.org>
  +freeipmi-0.7.9.ebuild:
  Version bump.

  03 May 2009; Markus Meier <maekke@gentoo.org> freeipmi-0.6.10.ebuild:
  amd64/x86 stable, bug #268006

*freeipmi-0.7.8 (17 Apr 2009)
