@@ -4,15 +4,9 @@ AUX freeipmi-0.5.6-as_needed.patch 554 RMD160 ec46ade1c84fa80c1bf1fd73463ccf5970
 AUX freeipmi-0.5.6-missing_syslog_include.patch 312 RMD160 a04770e6063348e47e2827c44c6db5e1c764e5f7 SHA1 822ad573a7ea06d9ff06d2eb95819a95a2c0b21d SHA256 4bcf53a89160fa4239a358cc5a90f5f65d5dffa04f471055b9ac95feaca2c6db
 AUX freeipmi-0.6.10+glibc-2.8.patch 5362 RMD160 914711231432f91fc03ad229ea8afcd8fb2a9651 SHA1 65f023ed3ded23996b90bd9c6e52ab6772ac6b27 SHA256 d9bc35866e5b48d25261e51c81a1db08044c552b6a2ea8537fbce9ab4b97ebaf
 AUX ipmidetectd.initd 799 RMD160 03e54b6b3d6e56ee3533096c3c2cca35d7537eb9 SHA1 7de96a810c7ca14e880320df0074cb5d6eb084a3 SHA256 7137eaf90c64f03d9eb1423336becbd02e1172bbef11139cfe6b9b1dbe60ea44
-DIST freeipmi-0.4.4.tar.gz 1476079 RMD160 3a1dd7380734b2ec561ed011dcdd92b05ed0ff74 SHA1 cf95a97c9c03dc24553b34de866914144c7613c7 SHA256 988c4645a4bdad6396c36bd9f92fa5a86b5eaccf1030ac940379562fc092498d
-DIST freeipmi-0.5.6.tar.gz 1540543 RMD160 a8795c876e371f30c7db086ea5f9b926303e919e SHA1 10a131b2a98ee42d2a34a952de55792c9a91976d SHA256 a800fe05a945186ca3eb99bb2df61cab0905d98a9ef44ba526ab620a7ba6f9ed
-DIST freeipmi-0.6.10.tar.gz 1669900 RMD160 073790a58d1589c1a07dcf73baa6601f4cb1d36f SHA1 1718ae26ec0b5dc093e82ff264b4f97fb753fbb9 SHA256 33c22e46feabe027913b40fd9ff5a8a745ac9b6cf27a6010f0fa801b2a966cdd
-DIST freeipmi-0.7.15.tar.gz 1991210 RMD160 a216dc2aecbbd5b45f0ac55b13c13ba762765f3c SHA1 b02aab0122041876f319a157a74c27653a917f4a SHA256 f3aa4216aa06d0f91f235665c0eaa1571e22d941270ad5508043d065889c4a10
 DIST freeipmi-0.8.2.tar.gz 2731441 RMD160 a7592dd2fe45a0e68b64b01c7ccc1a4e5d701db9 SHA1 af74a0891737f6d551ddf3957c7dd0521715d707 SHA256 6e0265bc9f53b915d439c3a574eebfd4041af10a1941fa5f87c741df8a91e504
-EBUILD freeipmi-0.4.4.ebuild 1467 RMD160 6378509d1151768bbe7b6af5712aba14d784db93 SHA1 f5424dab2e324f71f0002584b254cd16f769e245 SHA256 d89dfe9b5b0dec923b98445703ad2ff0021d9a186b659542b633e635f355646a
-EBUILD freeipmi-0.5.6.ebuild 1560 RMD160 e2756cbcefdd7f6b86d4d036bbc7b78cd415b716 SHA1 1fb62df5ff3d793721f8636c995ba1fdf7f68dee SHA256 a2829df20198643cc42b314b1c5c76bc46b8cdb4002450e0a85a820bac856c05
-EBUILD freeipmi-0.6.10.ebuild 1461 RMD160 f50e8c49c54863f2ed17b92de203669b67106feb SHA1 671eefae36da7f910b95b74575746e57a3e0629e SHA256 4f0d3ed12af58b46420883bda04182b4a5c0801835aaed1cf68b9ba54ac15c7e
-EBUILD freeipmi-0.7.15.ebuild 1284 RMD160 ff1306c991c3d8d78a368f7a98b03f343fdd7ed1 SHA1 9648a5d3f38abc0119e8947c5a5e2dedeef4708e SHA256 7ff0563defdf96e4c592206c3bdc32ccf02bb8cfd49f53bffb46ec5bac844d87
+DIST freeipmi-0.8.7.tar.gz 2766710 RMD160 f1700e95277c64722c6eb18cf3952fbc83213557 SHA1 a21f9e751cf13cdd4d260533191da148c08d10c0 SHA256 193ca0209d3334b97df2fd07e7a4dca8127ba0705a63d5baa4a4022164fb2747
 EBUILD freeipmi-0.8.2.ebuild 1284 RMD160 ff1306c991c3d8d78a368f7a98b03f343fdd7ed1 SHA1 9648a5d3f38abc0119e8947c5a5e2dedeef4708e SHA256 7ff0563defdf96e4c592206c3bdc32ccf02bb8cfd49f53bffb46ec5bac844d87
-MISC ChangeLog 4063 RMD160 2243719f6ab6afec5127d73cb1b268275ef2f39f SHA1 89371a2569612c81a999777864c5ad07456eb2a6 SHA256 d3cd30dcc192abe5859d7362b7ca931d68165502105fa20f7128954fb288a990
+EBUILD freeipmi-0.8.7.ebuild 1284 RMD160 ff1306c991c3d8d78a368f7a98b03f343fdd7ed1 SHA1 9648a5d3f38abc0119e8947c5a5e2dedeef4708e SHA256 7ff0563defdf96e4c592206c3bdc32ccf02bb8cfd49f53bffb46ec5bac844d87
+MISC ChangeLog 4194 RMD160 2bd1d94e3d482e66f55168ab6511d2d2c6346e04 SHA1 4f3a35ca8c55809158b5c5570bf3357ccef0e915 SHA256 85b9dd5da9a39b4c4a601833f389d491d385ac8100eb8fbdc488d639d5260606
 MISC metadata.xml 161 RMD160 036f72a3fa0f193b1ed10f46bea0df0a2bf7e07f SHA1 00f2ba2d18e3c9d0ba2305497408776582e87666 SHA256 4447fa40fb360e4e153d4fc115728bf9db74e1aa3536c77de0594dc487ca5cea
