@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sys-libs/freeipmi/ChangeLog,v 1.23 2009/11/19 21:21:18 flameeyes Exp $
 
+*freeipmi-0.8.7 (08 Jul 201)
+
+  08 Jul 2010; Daniel Robbins <drobbins@funtoo.org> +freeipmi-0.8.7.ebuild:
+  new upstream version.
+
 *freeipmi-0.8.2 (02 Feb 2010)
 
   02 Feb 2010; Daniel Robbins <drobbins@funtoo.org> +freeipmi-0.8.2.ebuild:
